tests/neg-custom-args/captures/i21401.check
-- Error: tests/neg-custom-args/captures/i21401.scala:13:14 ------------------------------------------------------------
13 |    op1(Boxed[IO^](x)) // error
   |              ^^^
   |              Type variable T of object Boxed cannot be instantiated to IO^ since
   |              that type captures the root capability `cap`.
   |
   |              where:    ^ refers to the universal root capability
-- Error: tests/neg-custom-args/captures/i21401.scala:15:18 ------------------------------------------------------------
15 |  val a = usingIO[IO^](x => x) // error // error
   |                  ^^^
   |                  Type variable R of method usingIO cannot be instantiated to IO^ since
   |                  that type captures the root capability `cap`.
   |
   |                  where:    ^ refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21401.scala:15:23 ---------------------------------------
15 |  val a = usingIO[IO^](x => x) // error // error
   |                       ^^^^^^
   |Found:    (x: IO^?) ->? IO^{x}
   |Required: IO^ => IO^²
   |
   |where:    => refers to a fresh root capability created in value a when checking argument to parameter op of method usingIO
   |          ^  refers to the universal root capability
   |          ^² refers to a fresh root capability created in value a when checking argument to parameter op of method usingIO
   |
   |Note that capability x.type is not included in capture set {cap}
   |because x.type is not visible from cap in value a.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i21401.scala:16:66 ------------------------------------------------------------
16 |  val leaked: [R, X <: Boxed[IO^] -> R] -> (op: X) -> R = usingIO[Res](mkRes) // error
   |                                                                  ^^^
   |     Type variable R of method usingIO cannot be instantiated to [R, X <: Boxed[IO^] -> R] => (op: X) -> R since
   |     the part IO^ of that type captures the root capability `cap`.
   |
   |     where:    ^ refers to the universal root capability
-- Error: tests/neg-custom-args/captures/i21401.scala:17:29 ------------------------------------------------------------
17 |  val x: Boxed[IO^] = leaked[Boxed[IO^], Boxed[IO^] -> Boxed[IO^]](x => x) // error // error // error
   |                             ^^^^^^^^^^
   |                             Type variable R of value leaked cannot be instantiated to Boxed[IO^] since
   |                             the part IO^ of that type captures the root capability `cap`.
   |
   |                             where:    ^ refers to the universal root capability
-- Error: tests/neg-custom-args/captures/i21401.scala:17:52 ------------------------------------------------------------
17 |  val x: Boxed[IO^] = leaked[Boxed[IO^], Boxed[IO^] -> Boxed[IO^]](x => x) // error // error // error
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^
   |                        Type variable X of value leaked cannot be instantiated to Boxed[IO^] -> Boxed[IO^] since
   |                        the part IO^ of that type captures the root capability `cap`.
   |
   |                        where:    ^ refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21401.scala:17:67 ---------------------------------------
17 |  val x: Boxed[IO^] = leaked[Boxed[IO^], Boxed[IO^] -> Boxed[IO^]](x => x) // error // error // error
   |                                                                   ^^^^^^
   |      Found:    (x: Boxed[IO^]^?) ->? Boxed[IO^²]
   |      Required: Boxed[IO^] -> Boxed[IO^³]
   |
   |      where:    ^  refers to the universal root capability
   |                ^² refers to a root capability associated with the result type of (x: Boxed[IO^]^?): Boxed[IO^²]
   |                ^³ refers to a fresh root capability created in value x²
   |
   |      Note that capability <cap of (x: Boxed[IO^]^?): Boxed[IO^]> is not included in capture set {cap}
   |      because <cap of (x: Boxed[IO^]^?): Boxed[IO^]> is not visible from cap in value x.
   |
   | longer explanation available when compiling with `-explain`
